# cicd_demo

./: .flake8  LICENSE  Makefile  pyproject.toml  setup.cfg
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.MD
cicd_demo/src/: __init__.py  base.py  characters.py
tests/: conftest.py
tests/src/: test_characters.py
