[tool.poetry]
name = "cicd-demo"
version = "0.0.1"
description = ""
authors = ["Anyang Peng"]
readme = "README.md"
packages = [{include = "cicd_demo"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
numpy = "^1.24.3"
isort = "^5.12.0"
bump2version = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
